SBAC-573: Fixed a z-index issue on the description hovers.

--- a/docroot/sites/all/modules/custom/sbac_search_api/sass/sbac_search_api.scss
+++ b/docroot/sites/all/modules/custom/sbac_search_api/sass/sbac_search_api.scss
@@ -160,6 +160,7 @@ $block-blue-lighter: #18a5d1;
             padding: 2px 5px;
             background-color: #fff4c8;
             width: 150px;
+            z-index: 9999;
           }
         }
 
